pilot/pkg/config/kube/gateway/testdata/tcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  addresses:
  - value: istio-ingressgateway
    type: Hostname
  gatewayClassName: istio
  listeners:
  - name: default
    port: 34000
    protocol: TCP
    allowedRoutes:
      namespaces:
        from: All
---
# Test we can bind to two parents
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway2
  namespace: istio-system
spec:
  addresses:
  - value: istio-ingressgateway
    type: Hostname
  gatewayClassName: istio
  listeners:
  - name: default
    port: 34000
    protocol: TCP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  - name: gateway2
    namespace: istio-system
  rules:
  - backendRefs:
    - name: httpbin
      port: 9090
